--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,13 +18,13 @@ backupdb:
     CRON_TIME: '* * * * *'
     #INIT_RESTORE_URL: myminio/databases/blabla.sql
     INIT_BACKUP: 'true'
-    MINIO_ACCESS_KEY: NKZ1L29S4GP01J6IOD6F
-    MINIO_HOST: myminio
-    MINIO_HOST_URL: http://minio:9000
-    MINIO_SECRET_KEY: 5w2WzW3Y6wNQbdQEADYD2USWlvx9vh4j+fgYOd4b
-    MINIO_BUCKET: testdb
-    MYSQL_USER: root
-    MYSQL_PASS: pass
+    #MINIO_ACCESS_KEY: NKZ1L29S4GP01J6IOD6F
+    #MINIO_HOST: myminio
+    #MINIO_HOST_URL: http://minio:9000
+    #MINIO_SECRET_KEY: 5w2WzW3Y6wNQbdQEADYD2USWlvx9vh4j+fgYOd4b
+    #MINIO_BUCKET: testdb
+    POSTGRES_USER: deploy
+    POSTGRES_PASSWORD: blabla
   build: .
   links:
     - postgres:postgres
